fix masonry layout bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,48 +1,17 @@
-*{
-  /* margin: 0;
-  padding: 0;
-  box-sizing: border-box; */
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
 .container {
-  /* width: 1400px; */
-  /* margin: 30px auto; */
-  margin-top: 100px;
-  columns: 4;
-  column-gap: 30px;
+  /* width: 90%; */
+  margin: 0 auto;
+  /* max-width: 1400px; */
 }
 
-
-.container .box {
+img {
   width: 100%;
-  margin-bottom: 10px;
-  break-inside: avoid;
+  cursor: pointer;
+  border-radius: 8px;
 }
-
-.container .box img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 15px;
-}
-
-
-
-@media (max-width: 1200px) {
-  .container {
-      width: calc(100% - 40px);
-      columns: 3;
-  }
-}
-
-@media (max-width: 768px) {
-  .container {
-      columns: 2;
-  }
-}
-
-@media (max-width: 480px) {
-  .container {
-      columns: 1;
-  }
-}
-
