--- a/styles/nav.css
+++ b/styles/nav.css
@@ -2,38 +2,33 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
 
 body {
-  background-color: #f1faee;
+  background-color: #e5e5e5;
   font-family: "Noto Serif Gurmukhi", serif;
-  max-width: 1400px;
-  margin-inline: auto;
 }
 
-
+.wrapper {
+  max-width: 1600px;
+  margin-inline: auto;
+}
 
 h1 {
   font-size: 30px;
   font-weight: bold;
-  color: white;
 }
-
-
 
 nav {
   position: fixed;
- width: 100%; 
-  max-width: 1400px;
+  width: 100%;
+  margin-inline: auto;
+  max-width: 1600px;
   top: 0px;
   z-index: 100;
   padding: 10px 0;
-  margin-inline: auto;
-  background-color: #023047;
-  
+  background-color: #ffffff;
 }
-
 
 .navbar {
   display: flex;
@@ -65,6 +60,3 @@ form {
   margin: 0px 10px;
   font-family: "Noto Serif Gurmukhi", serif;
 }
-
-
-
